<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.professor.traficinspiration.activity.SignInActivity">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dip"
        android:padding="15dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <!--<TextView-->
            <!--android:id="@+id/lbl_message"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="30dip"-->
            <!--android:gravity="center"-->
            <!--android:text="Application will be connected to your google account"-->
            <!--android:textColor="#000000" />-->

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/text_email"
            android:textSize="@dimen/label_field_text_size"
            android:textColor="#AAAAAA" />

        <TextView
            android:id="@+id/et_email"
            android:background="@drawable/grey_field"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:textSize="@dimen/input_field_text_size"
            android:maxLines="1" />


        <TextView
            android:id="@+id/lbl_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_password"
            android:textSize="@dimen/label_field_text_size"
            android:textColor="#AAAAAA" />

        <EditText
            android:id="@+id/et_password"
            android:background="@drawable/grey_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/hint_text_color"
            android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
            android:textSize="@dimen/input_field_text_size"
            android:maxLines="1"/>

        <!--<CheckBox-->
            <!--android:id="@+id/cb_remain_signed_in"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="12sp"-->
            <!--android:text="ОСТАВАТЬСЯ В СЕТИ" />-->

        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/yellow_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:textSize="@dimen/button_text_size"
            android:text="@string/text_enter" />

        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/green_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:textSize="@dimen/button_text_size"
            android:textColor="#FFFFFF"
            android:text="@string/text_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_button"/>

        <!--<TextView-->
            <!--android:id="@+id/forgot_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"-->
            <!--android:textAlignment="center"-->
            <!--android:text="ЗАБЫЛИ ПАРОЛЬ?"/>-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/sign_in_image" />


    </LinearLayout>

</LinearLayout>
